set publish_branch to gh-pages

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
               with:
                 personal_token: ${{ secrets.TOKEN }}
                 external_repository: "Eronana/eronana.github.io"
-                publish_branch: master
+                publish_branch: gh-pages
                 publish_dir: ./public
                 force_orphan: true
                 user_name: Eronana
