--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,7 @@ jobs:
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
               with:
-                personal_token: ${{ secrets.TOKEN }}
+                github_token: ${{ secrets.GITHUB_TOKEN }}
                 external_repository: "Eronana/eronana.github.io"
                 publish_branch: gh-pages
                 publish_dir: ./public
