--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,5 +47,8 @@ jobs:
               uses: peaceiris/actions-gh-pages@v3
               with:
                 github_token: ${{ secrets.GITHUB_TOKEN }}
+                publish_branch: gh-pages
                 publish_dir: ./public
                 force_orphan: true
+                user_name: Eronana
+                user_email: erona@loli.bz
