--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,9 @@ jobs:
             - name: Deploy
               uses: peaceiris/actions-gh-pages@v3
               with:
-                github_token: ${{ secrets.GITHUB_TOKEN }}
+                personal_token: ${{ secrets.TOKEN }}
+                external_repository: "Eronana/eronana.github.io"
+                publish_branch: gh-pages
                 publish_dir: ./public
                 force_orphan: true
                 user_name: Eronana
